--- a/proyecto negocio.vbproj
+++ b/proyecto negocio.vbproj
@@ -127,6 +127,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="prueba.resx">
+      <DependentUpon>prueba.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="BaseDatosNegocioDataSet.xsc">
